--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/gregnb/mui-datatables#readme",
   "devDependencies": {
-    "@material-ui/core": "^3.2.0",
+    "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -72,8 +72,8 @@
     "prettier": "^1.9.2",
     "prismjs": "^1.13.0",
     "raw-loader": "^0.5.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "rollup": "^0.52.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.6",
@@ -100,8 +100,10 @@
     "lodash.isequal": "^4.5.0",
     "lodash.isundefined": "^3.0.1",
     "lodash.memoize": "^4.1.2",
-    "lodash.merge": "^4.6.0",
+    "lodash.merge": "^4.6.2",
     "prop-types": "^15.6.0",
+    "react-dnd": "^9.3.4",
+    "react-dnd-html5-backend": "^9.3.4",
     "react-to-print": "^2.0.0-alpha.7"
   },
   "side-effects": false,
