--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "homepage": "https://github.com/gregnb/mui-datatables#readme",
   "devDependencies": {
-    "@material-ui/core": "^3.5.1",
+    "@material-ui/core": "^4.3.3",
+    "@material-ui/styles": "^4.3.3",
     "@material-ui/icons": "^3.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
