modernized and fixed deps

--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,8 @@
     }
   },
   "presets": [
-    "react",
-    ["env", {
+    "@babel/react",
+    ["@babel/env", {
       "targets": {
         "browsers": ["> 1%", "iOS >= 8", "Android >= 4"],
         "node": "6.10"
@@ -15,7 +15,7 @@
     }]
   ],
   "plugins": [
-    "babel-plugin-transform-class-properties",
-    "transform-object-rest-spread"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread"
   ]
 }
