--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mui-datatables",
-  "version": "2.10.1",
+  "name": "mui-dt",
+  "version": "0.1.0",
   "description": "Datatables for React using Material-UI",
   "main": "dist/index.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server -d --progress --colors",
-    "test": "mocha --require babel-register test/**/*.test.js",
+    "test": "mocha --require @babel/register test/**/*.test.js",
     "docs:dev": "next docs",
     "docs:build": "cross-env NODE_ENV=production next build docs",
     "docs:export": "next export docs -o docs/export",
@@ -37,20 +37,19 @@
   },
   "homepage": "https://github.com/gregnb/mui-datatables#readme",
   "devDependencies": {
-    "@material-ui/core": "^3.2.0",
-    "@material-ui/icons": "^3.0.1",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-loader": "^7.1.2",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
+    "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.1",
@@ -65,15 +64,14 @@
     "ignore-styles": "^5.0.1",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
-    "mocha": "^4.0.1",
-    "mocha-lcov-reporter": "^1.3.0",
+    "mocha": "^6.0.2",
     "next": "^5.1.0",
-    "nyc": "^11.3.0",
+    "nyc": "^14.1.1",
     "prettier": "^1.9.2",
     "prismjs": "^1.13.0",
     "raw-loader": "^0.5.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "rollup": "^0.52.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.6",
@@ -86,22 +84,19 @@
     "webpack-dev-server": "^2.9.5"
   },
   "peerDependencies": {
-    "@material-ui/core": "^3.2.0",
-    "@material-ui/icons": "^3.0.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "lodash.assignwith": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.find": "^4.6.0",
-    "lodash.get": "^4.4.2",
-    "lodash.isequal": "^4.5.0",
     "lodash.isundefined": "^3.0.1",
-    "lodash.memoize": "^4.1.2",
     "lodash.merge": "^4.6.0",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.7.2",
     "react-to-print": "^2.0.0-alpha.7"
   },
   "side-effects": false,
