--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "rollup-plugin-uglify": "^3.0.0",
     "simulant": "^0.2.2",
     "sinon": "^4.1.3",
-    "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5"
+    "webpack": "^4.39.3",
+    "webpack-dev-server": "^3.8.0"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.4.0",
@@ -98,7 +98,8 @@
     "lodash.isundefined": "^3.0.1",
     "lodash.merge": "^4.6.0",
     "prop-types": "^15.7.2",
-    "react-to-print": "^2.0.0-alpha.7"
+    "react-to-print": "^2.0.0-alpha.7",
+    "webpack-cli": "^3.3.8"
   },
   "side-effects": false,
   "nyc": {
