--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mui-dt",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Datatables for React using Material-UI",
   "main": "dist/index.js",
   "files": [
@@ -28,7 +28,10 @@
   "keywords": [
     "material-ui",
     "datatables",
-    "react"
+    "datatable",
+    "react",
+    "mui-datatables",
+    "material-table"
   ],
   "author": "patorjk <patorjk@gmail.com>",
   "license": "MIT",
@@ -38,6 +41,7 @@
   "homepage": "https://github.com/patorjk/mui-dt#readme",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-external-helpers": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
@@ -47,40 +51,39 @@
     "@material-ui/icons": "^4.2.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
-    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-istanbul": "^5.2.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
-    "chai": "^4.1.2",
-    "coveralls": "^3.0.0",
-    "cross-env": "^5.1.1",
-    "enzyme": "^3.5.0",
-    "enzyme-adapter-react-16": "^1.3.0",
-    "eslint": "^4.14.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-filenames": "^1.2.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.6",
+    "cross-env": "^5.2.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.3.0",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "ignore-styles": "^5.0.1",
-    "jsdom": "^11.5.1",
+    "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
-    "mocha": "^6.0.2",
-    "next": "^5.1.0",
+    "mocha": "^6.2.0",
+    "next": "^9.0.5",
     "nyc": "^14.1.1",
-    "prettier": "^1.9.2",
-    "prismjs": "^1.13.0",
-    "raw-loader": "^0.5.1",
+    "prettier": "^1.18.2",
+    "prismjs": "^1.17.1",
+    "raw-loader": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "rollup": "^0.52.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup": "^1.20.3",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-uglify": "^6.0.3",
     "simulant": "^0.2.2",
-    "sinon": "^4.1.3",
+    "sinon": "^7.4.2",
     "webpack": "^4.39.3",
     "webpack-dev-server": "^3.8.0"
   },
@@ -91,14 +94,14 @@
     "react-dom": "^16.9.0"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "lodash.assignwith": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.find": "^4.6.0",
     "lodash.isundefined": "^3.0.1",
     "lodash.merge": "^4.6.0",
     "prop-types": "^15.7.2",
-    "react-to-print": "^2.0.0-alpha.7",
+    "react-to-print": "^2.4.0",
     "webpack-cli": "^3.3.8"
   },
   "side-effects": false,
