--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "docs:export": "next export docs -o docs/export",
     "docs:deploy": "npm run docs:build && npm run docs:export && firebase deploy",
     "docs:start": "next start docs",
-    "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text mocha --require babel-register test/*.js && nyc report --reporter=html | cat coverage/lcov.info | coveralls",
-    "coverage:html": "cross-env NODE_ENV=test nyc check-coverage --lines 55 --reporter=html --reporter=text mocha --require babel-register test/*.js && nyc report --reporter=html",
+    "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text mocha --require @babel/register test/*.js && nyc report --reporter=html | cat coverage/lcov.info | coveralls",
+    "coverage:html": "cross-env NODE_ENV=test nyc check-coverage --lines 55 --reporter=html --reporter=text mocha --require @babel/register test/*.js && nyc report --reporter=html",
     "prettier": "find src/ docs/ test/ -type f -name \"*.js\" ! -path \"*/.next/*\" | xargs prettier --write",
     "lint": "eslint src",
     "build": "cross-env NODE_ENV=production npm run prettier && rollup -c",
