--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
     "no-tabs": 2,
     "react/self-closing-comp": 2,
     "react/no-typos": 2,
+    "react/jsx-no-duplicate-props": "warn",
     "jsx-a11y/no-autofocus": [ 2, {
       "ignoreNonDOM": true
     }]
