--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mui-dt",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Datatables for React using Material-UI",
   "main": "dist/index.js",
   "files": [
@@ -18,7 +18,8 @@
     "coverage:html": "cross-env NODE_ENV=test nyc check-coverage --lines 55 --reporter=html --reporter=text mocha --require @babel/register test/*.js && nyc report --reporter=html",
     "prettier": "find src/ docs/ test/ -type f -name \"*.js\" ! -path \"*/.next/*\" | xargs prettier --write",
     "lint": "eslint src",
-    "build": "cross-env NODE_ENV=production npm run prettier && rollup -c",
+    "build": "cross-env NODE_ENV=production rollup -c",
+    "_old_build": "cross-env NODE_ENV=production npm run prettier && rollup -c",
     "prepare": "npm run build"
   },
   "repository": {
