--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mui-dt",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "Datatables for React using Material-UI",
   "main": "dist/index.js",
   "files": [
@@ -65,6 +65,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "ignore-styles": "^5.0.1",
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
