--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "classnames": "^2.2.6",
     "lodash.assignwith": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.find": "^4.6.0",
     "lodash.isundefined": "^3.0.1",
     "lodash.merge": "^4.6.0",
